grammar/VeDclParser.js
// Generated from grammar/VeDcl.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var VeDclListener = require('./VeDclListener').VeDclListener;
var grammarFileName = "VeDcl.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'@include'", "';'", "':'", "'{'", "'}'", "'dialog'", 
                     "'row'", "'column'", "'concatenation'", "'radio_row'", 
                     "'radio_column'", "'button'", "'edit_box'", "'radio_button'", 
                     "'spacer'", "'text'", "'toggle'", "'='" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, "BOOL", "INT", "REAL", "STR", "ALIGN", "ID", 
                      "COMMENT", "LINE_COMMENT", "NEWLINE", "WHITESPACE" ];

var ruleNames =  [ "file", "includeFile", "defineTile", "innerTile", "clusterTile", 
                   "simpleTile", "deriveTile", "aliasTile", "entry", "fileName", 
                   "attribute", "attributeName", "attributeValue" ];

function VeDclParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

VeDclParser.prototype = Object.create(antlr4.Parser.prototype);
VeDclParser.prototype.constructor = VeDclParser;

Object.defineProperty(VeDclParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

VeDclParser.EOF = antlr4.Token.EOF;
VeDclParser.T__0 = 1;
VeDclParser.T__1 = 2;
VeDclParser.T__2 = 3;
VeDclParser.T__3 = 4;
VeDclParser.T__4 = 5;
VeDclParser.T__5 = 6;
VeDclParser.T__6 = 7;
VeDclParser.T__7 = 8;
VeDclParser.T__8 = 9;
VeDclParser.T__9 = 10;
VeDclParser.T__10 = 11;
VeDclParser.T__11 = 12;
VeDclParser.T__12 = 13;
VeDclParser.T__13 = 14;
VeDclParser.T__14 = 15;
VeDclParser.T__15 = 16;
VeDclParser.T__16 = 17;
VeDclParser.T__17 = 18;
VeDclParser.BOOL = 19;
VeDclParser.INT = 20;
VeDclParser.REAL = 21;
VeDclParser.STR = 22;
VeDclParser.ALIGN = 23;
VeDclParser.ID = 24;
VeDclParser.COMMENT = 25;
VeDclParser.LINE_COMMENT = 26;
VeDclParser.NEWLINE = 27;
VeDclParser.WHITESPACE = 28;

VeDclParser.RULE_file = 0;
VeDclParser.RULE_includeFile = 1;
VeDclParser.RULE_defineTile = 2;
VeDclParser.RULE_innerTile = 3;
VeDclParser.RULE_clusterTile = 4;
VeDclParser.RULE_simpleTile = 5;
VeDclParser.RULE_deriveTile = 6;
VeDclParser.RULE_aliasTile = 7;
VeDclParser.RULE_entry = 8;
VeDclParser.RULE_fileName = 9;
VeDclParser.RULE_attribute = 10;
VeDclParser.RULE_attributeName = 11;
VeDclParser.RULE_attributeValue = 12;


function FileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_file;
    return this;
}

FileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FileContext.prototype.constructor = FileContext;

FileContext.prototype.includeFile = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IncludeFileContext);
    } else {
        return this.getTypedRuleContext(IncludeFileContext,i);
    }
};

FileContext.prototype.defineTile = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DefineTileContext);
    } else {
        return this.getTypedRuleContext(DefineTileContext,i);
    }
};

FileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterFile(this);
	}
};

FileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitFile(this);
	}
};




VeDclParser.FileContext = FileContext;

VeDclParser.prototype.file = function() {

    var localctx = new FileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, VeDclParser.RULE_file);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 30;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===VeDclParser.T__0 || _la===VeDclParser.ID) {
            this.state = 28;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case VeDclParser.T__0:
                this.state = 26;
                this.includeFile();
                break;
            case VeDclParser.ID:
                this.state = 27;
                this.defineTile();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 32;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function IncludeFileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_includeFile;
    return this;
}

IncludeFileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IncludeFileContext.prototype.constructor = IncludeFileContext;

IncludeFileContext.prototype.fileName = function() {
    return this.getTypedRuleContext(FileNameContext,0);
};

IncludeFileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterIncludeFile(this);
	}
};

IncludeFileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitIncludeFile(this);
	}
};




VeDclParser.IncludeFileContext = IncludeFileContext;

VeDclParser.prototype.includeFile = function() {

    var localctx = new IncludeFileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, VeDclParser.RULE_includeFile);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 33;
        this.match(VeDclParser.T__0);
        this.state = 34;
        this.fileName();
        this.state = 36;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===VeDclParser.T__1) {
            this.state = 35;
            this.match(VeDclParser.T__1);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DefineTileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_defineTile;
    return this;
}

DefineTileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefineTileContext.prototype.constructor = DefineTileContext;


 
DefineTileContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function DefineClusterTileContext(parser, ctx) {
	DefineTileContext.call(this, parser);
    DefineTileContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DefineClusterTileContext.prototype = Object.create(DefineTileContext.prototype);
DefineClusterTileContext.prototype.constructor = DefineClusterTileContext;

VeDclParser.DefineClusterTileContext = DefineClusterTileContext;

DefineClusterTileContext.prototype.ID = function() {
    return this.getToken(VeDclParser.ID, 0);
};

DefineClusterTileContext.prototype.clusterTile = function() {
    return this.getTypedRuleContext(ClusterTileContext,0);
};

DefineClusterTileContext.prototype.entry = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EntryContext);
    } else {
        return this.getTypedRuleContext(EntryContext,i);
    }
};
DefineClusterTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterDefineClusterTile(this);
	}
};

DefineClusterTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitDefineClusterTile(this);
	}
};


function DefineSimpleTileContext(parser, ctx) {
	DefineTileContext.call(this, parser);
    DefineTileContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DefineSimpleTileContext.prototype = Object.create(DefineTileContext.prototype);
DefineSimpleTileContext.prototype.constructor = DefineSimpleTileContext;

VeDclParser.DefineSimpleTileContext = DefineSimpleTileContext;

DefineSimpleTileContext.prototype.ID = function() {
    return this.getToken(VeDclParser.ID, 0);
};

DefineSimpleTileContext.prototype.simpleTile = function() {
    return this.getTypedRuleContext(SimpleTileContext,0);
};

DefineSimpleTileContext.prototype.attribute = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AttributeContext);
    } else {
        return this.getTypedRuleContext(AttributeContext,i);
    }
};
DefineSimpleTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterDefineSimpleTile(this);
	}
};

DefineSimpleTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitDefineSimpleTile(this);
	}
};



VeDclParser.DefineTileContext = DefineTileContext;

VeDclParser.prototype.defineTile = function() {

    var localctx = new DefineTileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, VeDclParser.RULE_defineTile);
    var _la = 0; // Token type
    try {
        this.state = 66;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        switch(la_) {
        case 1:
            localctx = new DefineClusterTileContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 38;
            this.match(VeDclParser.ID);
            this.state = 39;
            this.match(VeDclParser.T__2);
            this.state = 40;
            this.clusterTile();
            this.state = 41;
            this.match(VeDclParser.T__3);
            this.state = 45;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===VeDclParser.T__2 || _la===VeDclParser.ID) {
                this.state = 42;
                this.entry();
                this.state = 47;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 48;
            this.match(VeDclParser.T__4);
            this.state = 50;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===VeDclParser.T__1) {
                this.state = 49;
                this.match(VeDclParser.T__1);
            }

            break;

        case 2:
            localctx = new DefineSimpleTileContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 52;
            this.match(VeDclParser.ID);
            this.state = 53;
            this.match(VeDclParser.T__2);
            this.state = 54;
            this.simpleTile();
            this.state = 55;
            this.match(VeDclParser.T__3);
            this.state = 59;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===VeDclParser.ID) {
                this.state = 56;
                this.attribute();
                this.state = 61;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 62;
            this.match(VeDclParser.T__4);
            this.state = 64;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===VeDclParser.T__1) {
                this.state = 63;
                this.match(VeDclParser.T__1);
            }

            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function InnerTileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_innerTile;
    return this;
}

InnerTileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InnerTileContext.prototype.constructor = InnerTileContext;


 
InnerTileContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function InnerAliasTileContext(parser, ctx) {
	InnerTileContext.call(this, parser);
    InnerTileContext.prototype.copyFrom.call(this, ctx);
    return this;
}

InnerAliasTileContext.prototype = Object.create(InnerTileContext.prototype);
InnerAliasTileContext.prototype.constructor = InnerAliasTileContext;

VeDclParser.InnerAliasTileContext = InnerAliasTileContext;

InnerAliasTileContext.prototype.aliasTile = function() {
    return this.getTypedRuleContext(AliasTileContext,0);
};
InnerAliasTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterInnerAliasTile(this);
	}
};

InnerAliasTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitInnerAliasTile(this);
	}
};


function InnerSimpleTileContext(parser, ctx) {
	InnerTileContext.call(this, parser);
    InnerTileContext.prototype.copyFrom.call(this, ctx);
    return this;
}

InnerSimpleTileContext.prototype = Object.create(InnerTileContext.prototype);
InnerSimpleTileContext.prototype.constructor = InnerSimpleTileContext;

VeDclParser.InnerSimpleTileContext = InnerSimpleTileContext;

InnerSimpleTileContext.prototype.simpleTile = function() {
    return this.getTypedRuleContext(SimpleTileContext,0);
};

InnerSimpleTileContext.prototype.attribute = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AttributeContext);
    } else {
        return this.getTypedRuleContext(AttributeContext,i);
    }
};
InnerSimpleTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterInnerSimpleTile(this);
	}
};

InnerSimpleTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitInnerSimpleTile(this);
	}
};


function InnerDeriveTileContext(parser, ctx) {
	InnerTileContext.call(this, parser);
    InnerTileContext.prototype.copyFrom.call(this, ctx);
    return this;
}

InnerDeriveTileContext.prototype = Object.create(InnerTileContext.prototype);
InnerDeriveTileContext.prototype.constructor = InnerDeriveTileContext;

VeDclParser.InnerDeriveTileContext = InnerDeriveTileContext;

InnerDeriveTileContext.prototype.deriveTile = function() {
    return this.getTypedRuleContext(DeriveTileContext,0);
};

InnerDeriveTileContext.prototype.attribute = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AttributeContext);
    } else {
        return this.getTypedRuleContext(AttributeContext,i);
    }
};
InnerDeriveTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterInnerDeriveTile(this);
	}
};

InnerDeriveTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitInnerDeriveTile(this);
	}
};


function InnerClusterTileContext(parser, ctx) {
	InnerTileContext.call(this, parser);
    InnerTileContext.prototype.copyFrom.call(this, ctx);
    return this;
}

InnerClusterTileContext.prototype = Object.create(InnerTileContext.prototype);
InnerClusterTileContext.prototype.constructor = InnerClusterTileContext;

VeDclParser.InnerClusterTileContext = InnerClusterTileContext;

InnerClusterTileContext.prototype.clusterTile = function() {
    return this.getTypedRuleContext(ClusterTileContext,0);
};

InnerClusterTileContext.prototype.entry = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EntryContext);
    } else {
        return this.getTypedRuleContext(EntryContext,i);
    }
};
InnerClusterTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterInnerClusterTile(this);
	}
};

InnerClusterTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitInnerClusterTile(this);
	}
};



VeDclParser.InnerTileContext = InnerTileContext;

VeDclParser.prototype.innerTile = function() {

    var localctx = new InnerTileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, VeDclParser.RULE_innerTile);
    var _la = 0; // Token type
    try {
        this.state = 110;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
        switch(la_) {
        case 1:
            localctx = new InnerClusterTileContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 68;
            this.match(VeDclParser.T__2);
            this.state = 69;
            this.clusterTile();
            this.state = 70;
            this.match(VeDclParser.T__3);
            this.state = 74;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===VeDclParser.T__2 || _la===VeDclParser.ID) {
                this.state = 71;
                this.entry();
                this.state = 76;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 77;
            this.match(VeDclParser.T__4);
            this.state = 79;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===VeDclParser.T__1) {
                this.state = 78;
                this.match(VeDclParser.T__1);
            }

            break;

        case 2:
            localctx = new InnerSimpleTileContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 81;
            this.match(VeDclParser.T__2);
            this.state = 82;
            this.simpleTile();
            this.state = 83;
            this.match(VeDclParser.T__3);
            this.state = 87;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===VeDclParser.ID) {
                this.state = 84;
                this.attribute();
                this.state = 89;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 90;
            this.match(VeDclParser.T__4);
            this.state = 92;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===VeDclParser.T__1) {
                this.state = 91;
                this.match(VeDclParser.T__1);
            }

            break;

        case 3:
            localctx = new InnerDeriveTileContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 94;
            this.match(VeDclParser.T__2);
            this.state = 95;
            this.deriveTile();
            this.state = 96;
            this.match(VeDclParser.T__3);
            this.state = 100;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===VeDclParser.ID) {
                this.state = 97;
                this.attribute();
                this.state = 102;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 103;
            this.match(VeDclParser.T__4);
            this.state = 105;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===VeDclParser.T__1) {
                this.state = 104;
                this.match(VeDclParser.T__1);
            }

            break;

        case 4:
            localctx = new InnerAliasTileContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 107;
            this.aliasTile();
            this.state = 108;
            this.match(VeDclParser.T__1);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClusterTileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_clusterTile;
    return this;
}

ClusterTileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClusterTileContext.prototype.constructor = ClusterTileContext;


ClusterTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterClusterTile(this);
	}
};

ClusterTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitClusterTile(this);
	}
};




VeDclParser.ClusterTileContext = ClusterTileContext;

VeDclParser.prototype.clusterTile = function() {

    var localctx = new ClusterTileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, VeDclParser.RULE_clusterTile);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 112;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << VeDclParser.T__5) | (1 << VeDclParser.T__6) | (1 << VeDclParser.T__7) | (1 << VeDclParser.T__8) | (1 << VeDclParser.T__9) | (1 << VeDclParser.T__10))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SimpleTileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_simpleTile;
    return this;
}

SimpleTileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SimpleTileContext.prototype.constructor = SimpleTileContext;


SimpleTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterSimpleTile(this);
	}
};

SimpleTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitSimpleTile(this);
	}
};




VeDclParser.SimpleTileContext = SimpleTileContext;

VeDclParser.prototype.simpleTile = function() {

    var localctx = new SimpleTileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, VeDclParser.RULE_simpleTile);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 114;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << VeDclParser.T__11) | (1 << VeDclParser.T__12) | (1 << VeDclParser.T__13) | (1 << VeDclParser.T__14) | (1 << VeDclParser.T__15) | (1 << VeDclParser.T__16))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DeriveTileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_deriveTile;
    return this;
}

DeriveTileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DeriveTileContext.prototype.constructor = DeriveTileContext;

DeriveTileContext.prototype.ID = function() {
    return this.getToken(VeDclParser.ID, 0);
};

DeriveTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterDeriveTile(this);
	}
};

DeriveTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitDeriveTile(this);
	}
};




VeDclParser.DeriveTileContext = DeriveTileContext;

VeDclParser.prototype.deriveTile = function() {

    var localctx = new DeriveTileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, VeDclParser.RULE_deriveTile);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 116;
        this.match(VeDclParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AliasTileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_aliasTile;
    return this;
}

AliasTileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AliasTileContext.prototype.constructor = AliasTileContext;

AliasTileContext.prototype.ID = function() {
    return this.getToken(VeDclParser.ID, 0);
};

AliasTileContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterAliasTile(this);
	}
};

AliasTileContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitAliasTile(this);
	}
};




VeDclParser.AliasTileContext = AliasTileContext;

VeDclParser.prototype.aliasTile = function() {

    var localctx = new AliasTileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, VeDclParser.RULE_aliasTile);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 118;
        this.match(VeDclParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function EntryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_entry;
    return this;
}

EntryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EntryContext.prototype.constructor = EntryContext;

EntryContext.prototype.attribute = function() {
    return this.getTypedRuleContext(AttributeContext,0);
};

EntryContext.prototype.innerTile = function() {
    return this.getTypedRuleContext(InnerTileContext,0);
};

EntryContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterEntry(this);
	}
};

EntryContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitEntry(this);
	}
};




VeDclParser.EntryContext = EntryContext;

VeDclParser.prototype.entry = function() {

    var localctx = new EntryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, VeDclParser.RULE_entry);
    try {
        this.state = 122;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 120;
            this.attribute();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 121;
            this.innerTile();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FileNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VeDclParser.RULE_fileName;
    return this;
}

FileNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FileNameContext.prototype.constructor = FileNameContext;

FileNameContext.prototype.STR = function() {
    return this.getToken(VeDclParser.STR, 0);
};

FileNameContext.prototype.enterRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.enterFileName(this);
	}
};

FileNameContext.prototype.exitRule = function(listener) {
    if(listener instanceof VeDclListener ) {
        listener.exitFileName(this);
	}
};




VeDclParser.FileNameContext = FileNameContext;

VeDclParser.prototype.fileName = function() {
